--- a/html/css/pages/research.css
+++ b/html/css/pages/research.css
@@ -12,3 +12,16 @@
 .vertical-list > a:last-child {
     border-bottom: none;
 }
+
+.horizontal-scroll {
+    display: flex;
+    flex-wrap: nowrap;
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+    scroll-snap-type: x mandatory;
+}
+
+.horizontal-scroll > div {
+    flex: 0 0 auto;
+    scroll-snap-align: start;
+}
