--- a/html/css/form/form.css
+++ b/html/css/form/form.css
@@ -65,8 +65,8 @@
 
 /* Field errors */
 .field-error {
-    margin-top: .5rem;
-    margin-bottom: .5rem;
+    /*margin-top: .5rem;*/
+    /*margin-bottom: .5rem;*/
     color: rgb(var(--color-danger));
     font-weight: 500;
 }
