--- a/html/css/pages/offers/detail.css
+++ b/html/css/pages/offers/detail.css
@@ -90,7 +90,7 @@ x-acordeon {
     margin-bottom: 1rem;
     position: sticky;
     overflow: hidden;
-    top: var(--navbar-height);
+    top: calc(var(--navbar-height) - 1px);
 
     display: flex;
     flex-direction: column;
@@ -131,4 +131,21 @@ x-acordeon {
 section {
     width: 100%;
     padding: 2rem 0;
+}
+
+/* Rating */
+.rating-choice {
+    display: flex;
+    gap: .5rem;
+}
+.rating-choice .star {
+    width: 3rem;
+    height: 3rem;
+    transition: background-color .2s;
+}
+.rating-choice .star.high {
+    background: rgb(var(--color-orange-secondary)) !important;
+}
+.rating-choice .star.not-high {
+    background: rgb(var(--color-gray-1)) !important;
 }
