--- a/html/css/pages/offers/detail.css
+++ b/html/css/pages/offers/detail.css
@@ -161,6 +161,7 @@ section {
 }
 
 .opinions-container .opinion-card {
+    padding-bottom: 1rem;
     border-bottom: 1px solid rgb(var(--color-gray-1));
 }
 
