--- a/html/css/pages/research.css
+++ b/html/css/pages/research.css
@@ -13,47 +13,59 @@
     border-bottom: none;
 }
 
-.filters-container {
+.categories-container {
     display: flex;
     flex-wrap: nowrap;
     gap: 10px;
     margin: 1rem 0;
 }
 
-.filter-item {
+.category-item {
     width: 100px;
-    height: 70px;
+    height: 80px;
     border-radius: 20px;
-    border: 1px solid #bbbbbb;
+    border: 1px solid rgb(var(--color-gray-2));
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 3px;
+    gap: .4rem;
     padding: 10px;
     text-align: center;
+    color: rgb(var(--color-gray-3));
+}
+.category-item svg {
+    stroke: rgb(var(--color-black));
+}
+.category-item.active {
+    border: 2px solid rgb(var(--color-gray-2));
+    color: rgb(var(--color-gray-4));
+}
+.category-item.active svg {
+    stroke: rgb(var(--color-blue-primary));
+    stroke-width: 2px;
 }
 
 @media (max-width: 768px) {
-    .filters-container {
+    .categories-container {
         overflow-x: auto;
         -webkit-overflow-scrolling: touch;
         scroll-snap-type: x mandatory;
     }
 
-    .filter-item {
+    .category-item {
         flex: 0 0 auto;
         scroll-snap-align: start;
     }
 }
 
 @media (min-width: 769px) {
-    .filters-container {
+    .categories-container {
         flex-wrap: nowrap;
         justify-content: space-between;
     }
 
-    .filter-item {
+    .category-item {
         flex: 1;
         max-width: calc(100% / 5 - 10px); /* Ensures each filter takes up 1/5th of the container */
     }
