--- a/html/css/form/form.css
+++ b/html/css/form/form.css
@@ -9,13 +9,17 @@
 /* A page which only contains a form */
 .form-page {
     margin: 0 15%;
-    margin-top: 8rem;
+    margin-top: 3rem;
 
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 2rem;
+}
+
+.form-page-little{
+    margin-top: 7.5rem;
 }
 
 .form-page form {
