--- a/html/css/parts/image-upload.css
+++ b/html/css/parts/image-upload.css
@@ -4,6 +4,7 @@
     width: 100%;
     height: 100%;
     padding: 2rem;
+    margin-bottom: 1rem;
 
     border: 2px dashed rgb(var(--color-gray-1));
     border-radius: var(--radius-small);
