--- a/html/css/pages/profile.css
+++ b/html/css/pages/profile.css
@@ -5,7 +5,6 @@
     display: flex;
     flex-wrap: nowrap;
     justify-content: space-evenly;
-    align-items: center;
 }
 
 .profile-up-bandeau
@@ -20,6 +19,22 @@
     font-weight: 500;
 }
 
+.profile-name
+{
+    margin-top: 25px;
+    margin-right: 5px;
+}
+
+.profile-stats
+{
+    margin-top: 20px;
+    margin-left: 10px;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    gap: 0.5rem;
+    font-size: var(--typescale-base);
+}
 /*
 .profile-up-bandeau-bloc
 {
@@ -32,6 +47,8 @@
     width: 200px;
     height: 200px;
     border-radius: 50%;
+    margin-right: 35px;
+    margin-bottom: 30px;
 }
 
 x-tab
