--- a/html/css/parts/navbar.css
+++ b/html/css/parts/navbar.css
@@ -146,7 +146,7 @@
 
 @media only screen and (min-width: 1440px) {
     .navbar {
-        padding: .5rem 20%;
+        padding: 0 20%;
     }
 
     .navbar .nav-burger {
