feat : add mean of payment in form pro private

--- a/html/css/main.css
+++ b/html/css/main.css
@@ -14,6 +14,7 @@
 @import "parts/opinion-card.css";
 @import "parts/avatar.css";
 @import "parts/research-card.css";
+@import "parts/payment.css";
 
 @import "form/form.css";
 @import "form/button.css";
