--- a/html/css/parts/navbar.css
+++ b/html/css/parts/navbar.css
@@ -165,7 +165,7 @@
     position: absolute;
     /*overflow: hidden;*/
     bottom: 0;
-    transform: translateY(calc(100% + .5rem)) translateX(-75%);
+    transform: translateY(calc(100%)) translateX(-75%);
     border-radius: var(--radius-small);
     border: 1px solid rgb(var(--color-gray-1));
     background: white;
@@ -195,7 +195,7 @@
 .avatar-options.open {
     opacity: 1;
     pointer-events: auto;
-    transform: translateY(calc(100% + 1rem)) translateX(-75%);
+    transform: translateY(calc(100% + .5rem)) translateX(-75%);
 }
 
 .avatar .avatar-options a {
