feat: Add Cards and Cards Carousel on Home Page

--- a/html/css/main.css
+++ b/html/css/main.css
@@ -15,6 +15,7 @@
 @import "parts/avatar.css";
 @import "parts/research-card.css";
 @import "parts/payment.css";
+@import "parts/carousel.css";
 
 @import "form/form.css";
 @import "form/button.css";
