--- a/html/css/pages/home.css
+++ b/html/css/pages/home.css
@@ -1,3 +1,43 @@
+.cardContent button:hover {
+    background: rgba(0, 0, 0, 0.8);
+}
+
+.cardContent button {
+    pointer-events: auto;
+    background: #007BFF;
+    border: none;
+    color: white;
+    font-size: 1.5rem;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: transform 0.3s ease, background-color 0.3s ease;
+}
+
+.cardContent button:hover {
+    transform: scale(1.1);
+    background: #0056b3;
+}
+
+.home-category-title {
+    font-family: var(--font-title);
+    font-size: var(--typescale-u3);
+    text-decoration: underline rgb(var(--color-orange-secondary));
+}
+
+.homeDisplay{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: center;
+    gap: 25px;
+}
+
 .home-card .enLigne {
     display: flex;
     flex-direction: row;
@@ -25,11 +65,10 @@
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
-    margin: 20px;
+    margin: 0 .3rem;
     background-color: white;
     border: 1px solid #E1E1E1;
     border-radius: 12px;
-    width: 301px;
     height: 426px;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
@@ -56,7 +95,7 @@
     font-family: var(--font-text);
     font-size: 0.8em;
     margin: 7px 0;
-    color: var(--color-gray-4);
+    color: rgb(var(--color-gray-4));
 }
 
 .home-card h1{
