--- a/html/css/form/form.css
+++ b/html/css/form/form.css
@@ -88,12 +88,20 @@
 }
 
 @media screen and (max-width: 768px) {
+    .form-page-little{
+        margin-top: 7.5rem !important;
+    }
+
     .form-page {
         margin: 0 10%;
     }
 }
 
 @media screen and (max-width: 480px) {
+    .form-page-little{
+        margin-top: 7.5rem !important;
+    }
+
     .form-page {
         margin: 0;
     }
