--- a/html/css/pages/dashboard/factures.css
+++ b/html/css/pages/dashboard/factures.css
@@ -16,3 +16,43 @@
     font-size: var(--typescale-u2);
     font-family: var(--font-title);
 }
+
+
+/* Accordion */
+.accordion {
+    margin-bottom: 1rem;
+}
+
+.accordion-trigger {
+    width: 100%;
+    padding: .5rem 0;
+    margin-bottom: 1rem;
+    border: 1px solid transparent;
+    border-bottom-color: rgb(var(--color-gray-1));
+    cursor: pointer;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    transition: padding .2s;
+}
+.accordion-trigger:hover {
+    border: 1px solid rgb(var(--color-gray-1));
+    padding: .5rem 1rem;
+    border-radius: var(--radius-small);
+}
+.accordion-trigger:hover svg {
+    opacity: 1;
+}
+
+.accordion-trigger svg {
+    opacity: 0;
+    transition: opacity .2s;
+}
+
+.offer-card {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
