feat: add offer status history, improve dashboard invoice page

--- a/html/css/pages/dashboard/factures.css
+++ b/html/css/pages/dashboard/factures.css
@@ -51,8 +51,53 @@
     transition: opacity .2s;
 }
 
-.offer-card {
+/* Option card */
+.option-card {
+    padding: .8rem 1rem;
+    position: relative;
+
     display: flex;
-    align-items: center;
     justify-content: space-between;
+    align-items: center;
+
+    border: 1px solid rgb(var(--color-gray-1));
+    border-radius: var(--radius-medium);
+}
+
+.option-card:hover {
+    background: rgba(var(--color-gray-1), .1);
+}
+
+/* Offer invoice card */
+.invoice-card {
+    padding: .8rem 1rem;
+    position: relative;
+    margin-bottom: 1.5rem;
+
+    display: flex;
+    justify-content: space-between;
+    /*align-items: center;*/
+
+    border: 1px solid rgb(var(--color-gray-1));
+    border-radius: var(--radius-medium);
+}
+
+.invoice-card header {
+    display: flex;
+    flex-direction: column;
+}
+
+.invoice-card header h3 {
+    font-weight: 700;
+    font-size: var(--typescale-u1);
+    font-family: var(--font-title);
+    margin-bottom: .3rem;
+}
+
+.invoice-card .card-buttons {
+    position: absolute;
+    display: flex;
+    gap: .5rem;
+    bottom: 0;
+    transform: translateY(50%);
 }
