--- a/html/css/pages/home.css
+++ b/html/css/pages/home.css
@@ -62,6 +62,7 @@
 }
 
 .home-card {
+    position: relative;
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
@@ -125,8 +126,12 @@
 
 .home-card .price{
     background-color: rgb(var(--color-blue-light));
-    border-radius: 15px;
-    padding: 1px 8px;
+    border-radius: 10px 0 10px 0;
+    padding: 4px 14px;
+    position: absolute;
+    right: 0;
+    bottom:0;
+    max-width: 140px;
 }
 
 .home-card .price-text{
