feat: improve and fix some stuff on dashboad invoice page

--- a/html/css/pages/dashboard/factures.css
+++ b/html/css/pages/dashboard/factures.css
@@ -20,7 +20,6 @@
 
 /* Accordion */
 .accordion {
-    margin-bottom: 1rem;
 }
 
 .accordion-trigger {
@@ -49,6 +48,10 @@
 .accordion-trigger svg {
     opacity: 0;
     transition: opacity .2s;
+}
+
+.accordion-content {
+    margin-bottom: 2rem;
 }
 
 /* Option card */
@@ -100,4 +103,48 @@
     gap: .5rem;
     bottom: 0;
     transform: translateY(50%);
+}
+
+.invoice-card .card-histories {
+    margin-top: 1.5rem;
+    padding-top: 1.5rem;
+    border-top: 1px solid rgb(var(--color-gray-1));
+}
+
+.invoice-card .card-histories .calendar {
+    margin-bottom: 2rem;
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    gap: .3rem;
+}
+
+/* Week days */
+.invoice-card .card-histories .week-days {
+    margin-bottom: .5rem;
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    place-items: center;
+    gap: .3rem;
+}
+
+/* Calendar */
+.invoice-card .card-histories .calendar span {
+    width: 4rem;
+    height: 4rem;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    border: 1px solid rgb(var(--color-gray-1));
+    border-radius: var(--radius-small);
+}
+
+.invoice-card .card-histories .calendar span.active {
+    background: rgba(var(--color-purple-primary), .1);
+    border: 1px solid rgba(var(--color-purple-primary), .1);
+}
+
+.invoice-card .card-histories .calendar span.last-month {
+    opacity: .5;
 }
