--- a/html/css/pages/research.css
+++ b/html/css/pages/research.css
@@ -50,9 +50,6 @@
     stroke-width: 2px;
 }
 
-.research-card{
-    position: relative;
-}
 
 .research-card .summary {
     display: -webkit-box;
@@ -70,8 +67,28 @@
     text-overflow: ellipsis;
 }
 
+
+.research-card--photo--enRelief {
+    height: 300px;
+    padding: .4rem;
+    border: 1px solid rgb(var(--color-orange-primary));
+    border-radius: calc(var(--radius-medium));
+    overflow: hidden;
+}
+
+.research-card--body--enRelief {
+    margin: 1rem 0;
+    padding: .5rem .5rem .5rem 1rem;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid rgb(var(--color-orange-primary));
+    border-left: none;
+    border-radius: 0 var(--radius-medium) var(--radius-medium) 0;
+}
+
 .enRelief{
     border: 1px solid rgb(var(--color-orange-primary));
+    position: relative;
 }
 
 .enReliefIcon{
