--- a/html/css/parts/research-card.css
+++ b/html/css/parts/research-card.css
@@ -58,6 +58,9 @@
     border-radius: calc(var(--radius-medium) - .4rem);
 }
 
+.enRelief{
+    border: 1px solid rgb(var(--color-orange-primary));
+}
 
 @media only screen and (max-width: 728px) {
     .research-card {
@@ -68,6 +71,7 @@
         border-radius: var(--radius-medium);
         border: 1px solid rgb(var(--color-gray-1));
     }
+
 
     .research-card--photo {
         height: 250px;
@@ -81,4 +85,9 @@
         margin: 0;
         border: none;
     }
+
+    .enReliefArticle{
+        border: 1px solid rgb(var(--color-orange-primary));
+    }
+
 }
