Modifying the popup on the update-member-account page

--- a/html/css/main.css
+++ b/html/css/main.css
@@ -1,6 +1,7 @@
 @import "variables.css";
 @import "reset.css";
 
+@import "parts/dialog.css";
 @import "parts/navbar.css";
 @import "parts/footer.css";
 @import "parts/loader.css";
