--- a/html/css/parts/loader.css
+++ b/html/css/parts/loader.css
@@ -10,7 +10,7 @@
     align-items: center;
     justify-content: center;
 
-    z-index: 100000;
+    z-index: 1000000;
 
     background: white;
 }
