chore : update a lot of things in update account

--- a/html/css/main.css
+++ b/html/css/main.css
@@ -16,6 +16,7 @@
 @import "parts/research-card.css";
 @import "parts/payment.css";
 @import "parts/carousel.css";
+@import "parts/password-check.css";
 
 @import "form/form.css";
 @import "form/button.css";
