--- a/html/css/parts/navbar.css
+++ b/html/css/parts/navbar.css
@@ -128,12 +128,23 @@
     gap: 2rem;
 }
 
+.navbarLoginButtons{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 1rem;
+}
+
 @media only screen and (max-width: 768px) {
     .navbar {
         padding: 0 20px !important;
     }
 
     .navbar .row>.button {
+        display: none;
+    }
+
+    .navbarLoginButtons{
         display: none;
     }
 }
