--- a/html/css/pages/home.css
+++ b/html/css/pages/home.css
@@ -209,33 +209,39 @@
 
 /* Filter carousel */
 
-.carousel-filter-card{
+.carousel-filter-card {
     position: relative;
-    text-align: center;
-    color: white;
+    height: 100px;
+    border-radius: 20px;
     margin: 10px;
     overflow: hidden;
 }
 
-.carousel-filter-card img{
-    border-radius: 20px;
-    height: 100px;
-    width: auto;
+.carousel-filter-card img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    filter: brightness(0.7);
+    transition: filter 0.3s ease;
 }
 
-.carousel-filter-card-text{
+.carousel-filter-card:hover img {
+    filter: brightness(0.4);
+}
+
+.carousel-filter-card-text {
     position: absolute;
-    font-size: var(--typescale-u3);
-    font-weight: 600;
-    top: 49%;
+    width: 95%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 100%;
-    height: 100px;
-    background-color: rgba(var(--color-black), .2);
-    border-radius: 20px;
-    padding-top: 17%;
+    color: white;
+    font-size: var(--typescale-u2);
+    font-weight: bold;
+    text-align: center;
+    z-index: 1;
 }
+
 
 .carouselBG {
     background-color: rgb(var(--color-orange-secondary));
