--- a/html/css/parts/dialog.css
+++ b/html/css/parts/dialog.css
@@ -19,6 +19,7 @@
 }
 
 .dialog {
+    max-width: 40%;
     position: relative;
     background-color: white;
     border: solid rgba(0, 0, 0, 0.1) 0.2px;
@@ -50,6 +51,7 @@
     cursor: pointer;
     transition: transform 0.2s;
 }
+
 .dialog-cross:hover {
     transform: scale(1.1);
 }
