--- a/html/css/parts/navbar.css
+++ b/html/css/parts/navbar.css
@@ -12,7 +12,7 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    width: 100%;
+    width: 100vw;
     border-bottom: 1px solid rgb(var(--color-gray-1));
 }
 
@@ -238,4 +238,51 @@
 .avatar .avatar-options a:last-child {
     border-radius: 0 0 var(--radius-small) var(--radius-small);
     border-bottom: none;
+}
+
+
+/* Bottom navbar */
+.bottom-navbar {
+    width: 100vw;
+    bottom: 0;
+    left: 0;
+    position: fixed;
+    background-color: white;
+
+    display: none;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+
+    z-index: 1001;
+    border-top: 1px solid rgb(var(--color-gray-1));
+}
+
+.bottom-navbar a {
+    padding: 1rem 0;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: .2rem;
+}
+
+.bottom-navbar a.active svg {
+    stroke-width: 2;
+    stroke: rgb(var(--color-blue-primary));
+}
+
+.bottom-navbar a span {
+    display: none;
+}
+
+.bottom-navbar a.active span {
+    display: block;
+}
+
+@media only screen and (max-width: 728px) {
+    .bottom-navbar {
+        display: flex;
+    }
 }
