--- a/html/css/parts/navbar.css
+++ b/html/css/parts/navbar.css
@@ -14,6 +14,9 @@
     align-items: center;
     width: 100vw;
     border-bottom: 1px solid rgb(var(--color-gray-1));
+
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
 }
 
 .navbar .nav-burger {
@@ -248,6 +251,9 @@
     left: 0;
     position: fixed;
     background-color: white;
+
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
 
     display: none;
     flex-direction: row;
