--- a/html/css/form/form.css
+++ b/html/css/form/form.css
@@ -49,9 +49,13 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    max-width: 600px;
+    max-width: 700px;
     width: 100%;
     gap: 1.25rem;
+}
+
+.form-l{
+    max-width: 600px;
 }
 
 .form-page .form-inputs {
