--- a/html/css/pages/research.css
+++ b/html/css/pages/research.css
@@ -146,3 +146,54 @@
         transform: translateX(-2rem);
     }
 }
+
+.wave {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    z-index: -10;
+    opacity: 0.2;
+}
+
+.waves>use {
+    animation: move-forever 12s -12s linear infinite;
+}
+
+.waves>use:nth-child(2) {
+    animation-delay: -12s;
+    animation-duration: 27s;
+}
+
+.waves>use:nth-child(3) {
+    animation-delay: -16s;
+    animation-duration: 12s;
+}
+
+@keyframes move-forever {
+    0% {
+        transform: translate(-90px, 0%);
+    }
+
+    100% {
+        transform: translate(85px, 0%);
+    }
+}
+
+.waveSvg {
+    position: absolute;
+    width: 100vh;
+    height: 10vw;
+    left: 0;
+    transform: rotate(90deg) translateY(-100%);
+    transform-origin: top left;
+}
+
+.waveSvg2 {
+    position: absolute;
+    width: 100vh;
+    height: 10vw;
+    right: 0;
+    transform: rotate(-90deg) translateY(-100%);
+    transform-origin: top right;
+}
