feat: Ajout des notifications

--- a/html/css/parts/navbar.css
+++ b/html/css/parts/navbar.css
@@ -168,6 +168,62 @@
     }
 }
 
+/* Notifications */
+.notifications .notifications-content{
+    width: fit-content;
+    position: absolute;
+    overflow: hidden;
+    bottom: 0;
+    transform: translateY(calc(100%)) translateX(-75%);
+    border-radius: var(--radius-small);
+    border: 1px solid rgb(var(--color-gray-1));
+    background: white;
+    pointer-events: none;
+    opacity: 0;
+    z-index: 1000;
+
+    transition: opacity .2s ease, transform .2s ease;
+}
+
+.notifications .notifications-content::before {
+    content: "";
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    border-left: 1px solid rgb(var(--color-gray-1));
+    border-top: 1px solid rgb(var(--color-gray-1));
+    background: white;
+    border-radius: 2px;
+    top: 0;
+    right: calc(45px / 2 - 10px / 2);
+    z-index: -1;
+    transform: translateY(-50%) rotate(45deg);
+}
+
+.notifications-content.open{
+    opacity: 1;
+    pointer-events: auto;
+    transform: translateY(calc(100% + .5rem)) translateX(-75%);
+}
+
+.notifications .notifications-content a {
+    width: 100%;
+    padding: .8rem 1rem;
+
+    background-color: white;
+    border-bottom: 1px solid rgb(var(--color-gray-1));
+
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+
+    transition: background-color .2s ease;
+}
+
+.notifications .notifications-icon{
+    cursor: pointer;
+}
+
 /* Avatar */
 .professional-mode .navbar .avatar .image-container:hover {
     box-shadow: 0 0 0 2px rgba(var(--color-purple-primary), .5);
@@ -177,7 +233,7 @@
 .avatar .avatar-options {
     width: fit-content;
     position: absolute;
-    /*overflow: hidden;*/
+    overflow: hidden;
     bottom: 0;
     transform: translateY(calc(100%)) translateX(-75%);
     border-radius: var(--radius-small);
