--- a/html/css/pages/home.css
+++ b/html/css/pages/home.css
@@ -133,7 +133,7 @@
 }
 
 .home-card .price{
-    background-color: rgb(var(--color-blue-light));
+    background-color: rgba(var(--color-blue-primary), .3);
     border-radius: 10px 0 10px 0;
     padding: 4px 14px;
     position: absolute;
@@ -157,8 +157,9 @@
 
 .rotating-text-container span {
     height: 2.3rem;
-    color: rgb(var(--color-blue-light));
+    color: rgb(var(--color-orange-primary));
     animation: moveUp 8s linear infinite;
+    margin-left: 5px;
 }
 
 @keyframes moveUp {
@@ -247,4 +248,65 @@
     background-color: rgb(var(--color-orange-secondary));
     position: relative;
     border-radius: 50px;
+}
+
+
+@keyframes move-forever {
+    0% {
+        transform: translate(-90px, 0%);
+    }
+
+    100% {
+        transform: translate(85px, 0%);
+    }
+}
+
+/* Waves */
+.wave {
+    width: 100vw;
+    opacity: 0.3;
+}
+
+
+.waves>use {
+    animation: move-forever 12s -12s linear infinite;
+}
+
+
+.waves>use:nth-child(2) {
+    animation-delay: -12s;
+    animation-duration: 27s;
+}
+
+
+.waves>use:nth-child(3) {
+    animation-delay: -16s;
+    animation-duration: 12s;
+}
+
+
+.waveSvg {
+    width: 100vw;
+    height: 10vw;
+    transform: rotate(180deg) translateY(-100%);
+    transform-origin: top;
+}
+
+
+
+.bgcol {
+    position: relative;
+    background-color: rgb(var(--color-blue-light));
+    padding: 2vh 0;
+}
+
+.bgcol::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -100vh;
+    width: 200vw;
+    height: 100%;
+    background-color: inherit;
+    z-index: -1;
 }
